# ose

./: .dockerignore  .env.example  .env.tauri  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: android-apk.yml  ci.yml  claude-code-review.yml  desktop.yml  docker.yml  release.yml  security.yml  tauri-check.yml
data/51cto-exams/: INDEX.md
docs/: ai-providers.md  api-reference.md  database.md  desktop-app.md  getting-started.md  self-hosting.md
scripts/: capture-screenshots.mjs  classify-51cto-questions.ts  sign-android-apks.sh
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: ai-assistant-loader.tsx  ai-assistant.tsx  ai-explain-button.tsx  ai-generate-client.tsx  ai-settings-card.tsx  ai-wrong-note-image-button.tsx  case-answer-client.tsx  exam-attempt-client.tsx  main-nav.tsx  practice-session.tsx  profile-forms.tsx  start-practice-button.tsx  wrong-notes-client.tsx
src/lib/: analysis.ts  auth.ts  stats.ts
src/prisma/: schema.prisma  seed.ts
src/test/: ai-prompts.test.ts  api-ai-status.test.ts  api-exam.test.ts  api-plan.test.ts  api-practice-cases.test.ts  api-practice.test.ts  api-profile-wrong-notes.test.ts  api-questions.test.ts  api-register.test.ts  context-cache.test.ts  helpers.ts  html-to-text.test.ts  learning-context.test.ts  setup.ts
(+72 files in other folders)
